# adv_mla_lab_3_sgd_api

./: pyproject.toml
app/: main.py
