[project]
name = "lab3-api"
version = "0.1.0"
description = "tutorial for fastAPI"
authors = [
    {name = "Mitali-UTS",email = "mitali.H.balki@stdent.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "scikit-learn (==1.5.1)",
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "joblib (==1.4.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
